2004-03-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : MoveTo*Namespace() should not iterate
	  namespace nodes which has the same name as already-iterated nodes.
	  Also xmlns='' should not be selected, and once it appeared, default 
	  namespace should not be selected anymore.

2004-03-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlCharacterData.cs : ReplaceData() should reject negative integer
	  value for count argument.
	* XmlAttribute.cs, XmlAttributeCollection.cs, XmlNamedNodeMap.cs :
	  On RemoveNamedItem(), default attribute value should be restored.

2004-03-24  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttributeCollection.cs : Remove() should throw an exception when
	  target attribute is not included in the collection.
	* XmlDocument.cs : ImportNode() should reject null node.
	* XmlNode.cs : Fixed type of exception for invalid insertion.
	  It should throw an exception not only when the owner document of the
	  reference element is different but its parent element is different.
	  Some error message improvement.

2004-03-21  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : ReadInnerXml() incorrectly tried to get output xml.
	  This fixes bug #55856.

2004-03-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : Fixed indentation on CDATA. This fixes bug #55828.

2004-03-19  Atsushi Enomoto <atsushi@ximian.com>

	* XmlImplementation.cs : HasFeature() returns true when strVersion
	  is null.

2004-03-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlWhitespace.cs : Fixed WriteTo(). Whitespace nodes should be 
	  written regardless of document's PreserveWhitespace.

2004-03-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : Value should return concatenated string for 
	  sequential text nodes. Considered detached nodes, the result of 
	  MoveToParent() should be checked.

2004-03-15  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : ReadInnerXml()/ReadOuterXml() should not bork when